# lazyfilter

./: .gitignore  README.md  pyproject.toml
lazyfilter/: __init__.py  column_filter.py  dataframe_filter.py  lazy.py  utils.py
